--- a/libs/sistema/theme/tokens/_spacing.tokens.scss
+++ b/libs/sistema/theme/tokens/_spacing.tokens.scss
@@ -23,6 +23,7 @@ $rhythm: (
   24: ($spacer * 24),     //  24   unit - 192px - 12     rem
   28: ($spacer * 28),     //  28   unit - 224px - 14     rem
   32: ($spacer * 32),     //  32   unit - 256px - 16     rem
+  35: ($spacer * 35),     //  35   unit - 280px - 17.5   rem
   40: ($spacer * 40),     //  40   unit - 320px - 20     rem
   48: ($spacer * 48),     //  48   unit - 384px - 24     rem
   56: ($spacer * 56),     //  56   unit - 448px - 28     rem
