--- a/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.scss
+++ b/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.scss
@@ -1,53 +1,51 @@
 @import 'variables';
 
 .bar-chart {
+  $chart-line-color: $color-neutral-light;
+  $chart-font-size: font-size(xs);
   position: relative;
-  --app-chart-line-color: #e1e1e1;
 
   .bar {
-    fill: var(--stf-primary);
+    fill: $color-primary-regular;
     opacity: 0.5;
     &:last-child {
       opacity: 1;
     }
   }
 
-  .tick {
-    text {
-      font-family: var(--stf-font-family);
-      font-size: var(--stf-font-size-ssmall);
-      font-weight: var(--stf-font-weight-light);
-      cursor: default;
-      user-select: none;
-    }
+  .tick text {
+    font-family: $font-family-body;
+    font-size: $chart-font-size;
+    font-weight: $font-weight-thin;
+    cursor: default;
+    user-select: none;
   }
 
   .grid-line {
-    stroke: var(--app-chart-line-color);
+    stroke: $chart-line-color;
   }
 
-  .y-axis {
-    line {
-      stroke: var(--app-chart-line-color);
-    }
+  .y-axis line {
+    stroke: $chart-line-color;
   }
 
   .tooltip {
-    background-color: #000;
-    position: absolute;
-    transform: translateX(-50%);
+    background-color: $color-dark-stronger;
+    color: $color-light-stronger;
     padding: rythm(0.5);
-    font-size: var(--stf-font-size-ssmall);
-    color: #fff;
+    position: absolute;
+    font-size: $chart-font-size;
+    transform: translateX(-50%);
+
     &::after {
+      border-top: rhythm(0.5) solid $color-dark-stronger;
+      border-left: rhythm(0.5) solid transparent;
+      border-right: rhythm(0.5) solid transparent;
+      bottom: - rhythm(0.5);
       content: '';
-      position: absolute;
-      bottom: -5px;
-      left: calc(50% - 5px);
       height: 0;
-      border-top: 5px solid #000;
-      border-left: 5px solid transparent;
-      border-right: 5px solid transparent;
+      position: absolute;
+      left: calc(50% - #{rhythm(0.5)});
     }
   }
 }
