--- a/libs/sistema/theme/_pastanaga-component-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-component-overrides.scss
@@ -14,6 +14,7 @@ overrides for
 @import "tokens/chips.tokens";
 @import "tokens/menu.tokens";
 @import "tokens/table.tokens";
+@import "tokens/tabs.tokens";
 @import "tokens/textfield.tokens";
 @import "tokens/toasts.tokens";
 @import "tokens/toggle.tokens";
