--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -1,24 +1,38 @@
 <div class="account-home">
   <div class="container-row">
-    <div class="container processing-stats">
-      <div class="chart-header">
-        <div class="chart-type">
-          <span class="selected">{{ 'account.chart_ML_characters' | translate }}</span>
-          <div class="separator"></div>
-          <span>{{ 'account.chart_media_hours' | translate }}</span>
-          <div class="separator"></div>
-          <span>{{ 'account.chart_documents' | translate }}</span>
+    <div class="processing-stats">
+      <pa-tabs noSlider notFullWidth>
+        <pa-tab [active]="selectedTab === 'completed'"
+                (click)="selectedTab = 'completed'">Processed resources</pa-tab>
+        <pa-tab [active]="selectedTab === 'pending'"
+                (click)="selectedTab = 'pending'">Resources pending to be processed</pa-tab>
+      </pa-tabs>
+
+      <section *ngIf="selectedTab === 'completed'"
+               class="container">
+        <div class="chart-header">
+          <div class="chart-type-container">
+            <span class="chart-type selected">{{ 'account.chart_ML_characters' | translate }}</span>
+            <div class="separator"></div>
+            <span class="chart-type">{{ 'account.chart_media_hours' | translate }}</span>
+            <div class="separator"></div>
+            <span class="chart-type">{{ 'account.chart_documents' | translate }}</span>
+          </div>
+          <span class="renewal-message">{{ 'account.renewal' | translate }}</span>
         </div>
-        <span class="renewal-message">{{ 'account.renewal' | translate }}</span>
-      </div>
-      <app-empty-chart *ngIf="(processing | async) === null" [numLines]="3"></app-empty-chart>
-      <app-bar-chart [data]="(processing | async) || []"
-                     [threshold]="(account | async).limits.processing.monthly_limit_chars_processed"
-                     [axisYMultiplier]="1"
-                     [height]="320"
-                     [locale]="locale | async"
-                     [tooltipsEnabled]="true"
-      ></app-bar-chart>
+        <app-empty-chart *ngIf="(processing | async) === null" [numLines]="3"></app-empty-chart>
+        <app-bar-chart [data]="(processing | async) || []"
+                       [threshold]="(account | async).limits.processing.monthly_limit_chars_processed"
+                       [axisYMultiplier]="1"
+                       [height]="320"
+                       [locale]="locale | async"
+                       [tooltipsEnabled]="true"
+        ></app-bar-chart>
+      </section>
+      <section *ngIf="selectedTab === 'pending'"
+               class="container">
+        TODO
+      </section>
     </div>
 
     <div class="right-column">
