--- a/apps/dashboard/src/app/account/account-home/account-home.component.html
+++ b/apps/dashboard/src/app/account/account-home/account-home.component.html
@@ -12,17 +12,26 @@
                class="container">
         <div class="chart-header">
           <div class="chart-type-container">
-            <span class="chart-type selected">{{ 'account.chart_ML_characters' | translate }}</span>
+            <span class="chart-type"
+                  [class.selected]="(processedView | async) === statsType.CHARS"
+                  (click)="processedView.next(statsType.CHARS)"
+            >{{ 'account.chart_ML_characters' | translate }}</span>
             <div class="separator"></div>
-            <span class="chart-type">{{ 'account.chart_media_hours' | translate }}</span>
+            <span class="chart-type"
+                  [class.selected]="(processedView | async) === statsType.MEDIA_SECONDS"
+                  (click)="processedView.next(statsType.MEDIA_SECONDS)"
+            >{{ 'account.chart_media_hours' | translate }}</span>
             <div class="separator"></div>
-            <span class="chart-type">{{ 'account.chart_documents' | translate }}</span>
+            <span class="chart-type"
+                  [class.selected]="(processedView | async) === statsType.DOCS_NO_MEDIA"
+                  (click)="processedView.next(statsType.DOCS_NO_MEDIA)"
+            >{{ 'account.chart_documents' | translate }}</span>
           </div>
           <span class="renewal-message">{{ 'account.renewal' | translate }}</span>
         </div>
         <app-empty-chart *ngIf="(processing | async) === null" [numLines]="3"></app-empty-chart>
         <app-bar-chart [data]="(processing | async) || []"
-                       [threshold]="(account | async).limits.processing.monthly_limit_chars_processed"
+                       [threshold]="(processedThreshold | async)"
                        [axisYMultiplier]="1"
                        [height]="320"
                        [locale]="locale | async"
