--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -65,7 +65,8 @@
 
   /* TYPOGRAPHY */
   --font-size-base: var(--custom-font-size-base, 16px);
-  --font-size-small: var(--custom-font-size-base, 13px);
+  --font-size-small: 13px;
+  --font-size-xsmall: 12px;
   --font-weight-body: var(--custom-font-weight-body, 300);
   --font-weight-semi-bold: var(--custom-font-weight-semi-bold, 500);
   --font-weight-bold: var(--custom-font-weight-semi-bold, 700);
