--- a/apps/dashboard/src/app/components/charts/line-chart/line-chart.component.scss
+++ b/apps/dashboard/src/app/components/charts/line-chart/line-chart.component.scss
@@ -1,34 +1,10 @@
+@import '../charts-common';
+
 .line-chart {
-  --app-chart-line-color: #e1e1e1;
+  @include chart();
 
   .data-line {
-    stroke: var(--stf-primary);
+    stroke: $color-primary-regular;
   }
 
-  .tick {
-    text {
-      font-family: var(--stf-font-family);
-      font-size: var(--stf-font-size-ssmall);
-      font-weight: var(--stf-font-weight-light);
-      cursor: default;
-      user-select: none;
-    }
-  }
-
-  .grid-line {
-    stroke: var(--app-chart-line-color);
-  }
-
-  .y-axis {
-    line {
-      stroke: var(--app-chart-line-color);
-    }
-  }
-
-  .x-axis {
-    line {
-      stroke: #fff;
-      stroke-width: 3px;
-    }
-  }
 }
