--- a/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.scss
+++ b/apps/dashboard/src/app/components/charts/bar-chart/bar-chart.component.scss
@@ -1,32 +1,14 @@
-@import 'variables';
+@import '../charts-common';
 
 .bar-chart {
-  $chart-line-color: $color-neutral-light;
-  $chart-font-size: font-size(xs);
-  position: relative;
+  @include chart();
 
   .bar {
     fill: $color-primary-regular;
-    opacity: 0.5;
+    opacity: 0.3;
     &:last-child {
       opacity: 1;
     }
-  }
-
-  .tick text {
-    font-family: $font-family-body;
-    font-size: $chart-font-size;
-    font-weight: $font-weight-thin;
-    cursor: default;
-    user-select: none;
-  }
-
-  .grid-line {
-    stroke: $chart-line-color;
-  }
-
-  .y-axis line {
-    stroke: $chart-line-color;
   }
 
   .tooltip {
