--- a/apps/dashboard/src/app/components/charts/_charts-common.scss
+++ b/apps/dashboard/src/app/components/charts/_charts-common.scss
@@ -21,4 +21,25 @@ $chart-font-size: font-size(xs);
   .y-axis line {
     stroke: $chart-line-color;
   }
+
+  .tooltip {
+    background-color: $color-dark-stronger;
+    color: $color-light-stronger;
+    padding: rythm(0.5);
+    position: absolute;
+    font-size: $chart-font-size;
+    transform: translateX(-50%);
+    pointer-events: none;
+
+    &::after {
+      border-top: rhythm(0.5) solid $color-dark-stronger;
+      border-left: rhythm(0.5) solid transparent;
+      border-right: rhythm(0.5) solid transparent;
+      bottom: - rhythm(0.5);
+      content: '';
+      height: 0;
+      position: absolute;
+      left: calc(50% - #{rhythm(0.5)});
+    }
+  }
 }
