Mobile & tablet view + some fixes in time indicator

--- a/libs/search-widget/src/tiles/_tile.scss
+++ b/libs/search-widget/src/tiles/_tile.scss
@@ -72,6 +72,10 @@
         margin: 0;
       }
     }
+
+    .thumbnail-container {
+      flex: 1 0 auto;
+    }
   }
 }
 @media (max-width: 647px) {
