PDF tile side panel
  - When side panel is open:
    - disable search result navigator
    - show global search query by default
  - Open/close the side panel using cmd+F or ctrl+F
  - Display search results in side panel and highlight selected paragraph
  - Working find in PDF input

--- a/libs/search-widget/src/common/common-style.scss
+++ b/libs/search-widget/src/common/common-style.scss
@@ -56,8 +56,10 @@
   --rhythm-24: calc(var(--spacer) * 24);     /*  24   unit - 192px */
   --rhythm-28: calc(var(--spacer) * 28);     /*  28   unit - 224px */
   --rhythm-32: calc(var(--spacer) * 32);     /*  32   unit - 256px */
+  --rhythm-36: calc(var(--spacer) * 36);     /*  36   unit - 288px */
   --rhythm-39: calc(var(--spacer) * 39);     /*  39   unit - 312px */
   --rhythm-40: calc(var(--spacer) * 40);     /*  40   unit - 320px */
+  --rhythm-46: calc(var(--spacer) * 46);     /*  46   unit - 368px */
   --rhythm-48: calc(var(--spacer) * 48);     /*  48   unit - 384px */
   --rhythm-53: calc(var(--spacer) * 53);     /*  53   unit - 424px */
   --rhythm-56: calc(var(--spacer) * 56);     /*  56   unit - 448px */
