--- a/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
+++ b/libs/search-widget/src/common/paragraph-result/ParagraphResult.scss
@@ -3,20 +3,25 @@
   display: flex;
   gap: var(--rhythm-1);
   line-height: var(--rhythm-3);
-  transition: background-color var(--transition-superfast);
+  transition: background-color var(--transition-superfast), color var(--transition-superfast);
 
   &:not(.stack) {
     align-items: center;
+
+    &.no-indicator {
+      margin-left: calc(var(--rhythm-1) * -1);
+      padding-left: var(--rhythm-1);
+    }
   }
   &.stack {
     flex-direction: column;
     gap: var(--rhythm-0_5);
     padding: var(--rhythm-2);
   }
-  &.no-indicator {
-    margin-left: calc(var(--rhythm-1) * -1);
-    padding-left: var(--rhythm-1);
+  &.no-indicator.selected {
+    color: var(--color-primary-regular);
   }
+
   .paragraph-text {
     overflow-wrap: break-word;
   }
